2004-01-19 multipath-013
	* update the DM target synthax to the 2.6.0-udm5 style
2003-12-29 multipath-012
	* check hotplug event refers to a block device; if not exit early
	* refresh doc
	* add the uninstall target in Makefile
2003-12-22 multipath-010
	* tweak the install target in Makefile
	* stop passing fds as argument : this change enable a strict
	  segregation of ugly 2.4 code
	* sysfs version of get_lun_strings()
	* be careful about the return of get_unique_id() since errors 
	  formerly caught up by if(open()) in the caller fn are now returned
	  by get_unique_id()
	* send get_serial() in unused.c
	* introduce dm-simplecmd for RESUME & SUSPEND requests
	* split add_map() in setup_map() & dm-addmap()
	* setup_map() correctly submits "SUSPEND-RELOAD-RESUME or CREATE"
	  sequences instead of the bogus "RELOAD or CREATE"
	* don't print .sg_dev if equal to .dev (2.6) in print_path()
	* since the kernel code handles defective paths, remove all
	  code to cope with them :
		* move do_tur() to unused.c
		* remove .state from path struct
		* remove .state settings & conditionals
	* add a cmdline switch to force maps to failover mode,
	  ie 1 path per priority group
	* add default policies to the whitelist array (spread io ==
	  MULTIBUS / io forced to 1 path == FAILOVER)
	* move get_disk_size() call out of add_map() to coalesce()
	* comment tricky coalesce() fn
	* bogus unsused.c file renamed to unused.c
2003-12-20 multipath-010
	* big ChangeLog update
	* start to give a little control over target params :
	  introduce cmdline arg -i to control polling interval
	* cope with hotplug-style calling convention :
	  ie "multipath scsi $DEVPATH" ... to avoid messing with
	  online maps not concerned by an event
	* example hotplug agent to drop in /etc/hotplug.d/scsi
	* revert the run & resched patch : unless someone proves me
	  wrong, this was overdesigned
	* move commented out functions in unused.c
	* update multipath target params to "udm[23] style"